--- a/builds/templates/builds/builds.html
+++ b/builds/templates/builds/builds.html
@@ -17,13 +17,13 @@
     </tr>
     {% for r in rows %}
         <tr class="{{ r.built|yesno }}">
-          <td>{{ r.id }}</a></td>
+          <td><a href="/builds/detail/{{ r.id }}">{{ r.id }}</a></td>
           <td>{{ r.srcpkg }}</td>
           <td>{{ r.status }}</td>
           <td><a href="/builds/log/{{ r.log }}">{{ r.log|cut:"/var/log/carpetbag/" }}</a></td>
           <td><a href="/builds/log/{{ r.buildlog }}">{{ r.buildlog|cut:"/var/log/carpetbag/" }}</a></td>
-          <td>{{ r.built|yesno:"succeeded,failed," }}</td>
-          <td>{{ r.valid|yesno:"succeeded,failed," }}</td>
+          <td class="{{ r.built|yesno }}">{{ r.built|yesno:"succeeded,failed," }}</td>
+          <td class="{{ r.valid|yesno }}">{{ r.valid|yesno:"succeeded,failed," }}</td>
           <td>{{ r.start_timestamp|date:"c" }}</td>
           <td>{{ r.end_timestamp|date:"c" }}</td>
         </tr>
