--- a/builds/templates/builds/builds.html
+++ b/builds/templates/builds/builds.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 
+<meta http-equiv="refresh" content="60">
 <link rel="stylesheet" type="text/css" href="{% static 'builds/style.css' %}" />
 
 {% if rows %}
